# fast_api_project

./: .gitignore  docker-compose.yml  pyproject.toml
nginx/: default.conf
nginx/src/: index.html
products/: Dockerfile  pyproject.toml
products/src/: app.py  config.py  dependencies.py  main.py
products/src/api/graphql/: decorators.py  resolvers.py
products/src/api/rest/: decorators.py  responses.py  views.py
products/src/api/rest/products/: views.py
products/src/core/: exceptions.py  services.py  transports.py
products/src/infrastructure/database/: base.py  redis_repository.py
products/src/infrastructure/kafka/: consumer.py
products/src/products/: manager.py
products/src/tests/integration/: conftest.py
src/: config.py  dependencies.py  main.py
src/api/graphql/users/: resolvers.py
src/api/rest/products/: decorators.py
src/api/rest/users/: views.py
src/core/irepositories/: user.py
src/core/products/: services.py
src/core/users/: dto.py  services.py
src/infrastructure/repositories/: user.py
src/tests/integration/: conftest.py
users/: pyproject.toml
users/src/: app.py  config.py  main.py
users/src/core/users/: dto.py  entities.py  exceptions.py  services.py
users/src/infrastructure/: external_service_facade.py
users/src/infrastructure/database/: uow.py
users/src/infrastructure/kafka/: producer.py
users/src/infrastructure/loging_configs/: local.py  sentry.py
users/src/infrastructure/models/: user.py
users/src/infrastructure/product_service/: product_facade.py
users/src/migrations/: env.py
(+8 files in other folders)
